--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_dark"> #58af00 </color>
+    <color name="primary_dark"> #4C35A5 </color>
 </resources>
